--- a/app.json
+++ b/app.json
@@ -1,6 +1,8 @@
 {
   "pages": [
     "pages/home/home",
+    "pages/wxml/wxml",
     "pages/about/about"
-  ]
+  ],
+  "sitemapLocation": "sitemap.json"
 }
